{{cookiecutter.deb_project_name}} ({{cookiecutter.version_number}}) stable; urgency=high
  * initial release
 -- {{cookiecutter.author_name}} <{{cookiecutter.author_email}}>  Thu, Jan 01 1970 00:00:00 -0700