@@ -2,8 +2,13 @@
 %:
 	dh $@ --with python-virtualenv
 
+ifdef DEBIAN_FRONTEND
 override_dh_virtualenv:
-	dh_virtualenv --python /usr/bin/python3.5 --preinstall matplotlib --extra-index-url https://repo.fury.io/lockefox/ 
+	dh_virtualenv 
+else
+override_dh_virtualenv:
+	dh_virtualenv --python /usr/bin/python3.5 
+endif
 
 override_dh_strip:
 	dh_strip --exclude=numpy --exclude=pandas --exclude=matplotlib
